"Anchor Tag With Target"

--- a/HTML/BasicTags/AchrorTag.html
+++ b/HTML/BasicTags/AchrorTag.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- By Default Its Set on "_self" as Target -->
+    <a href="./IntroOfHTML.html"><h1>Click Me</h1></a>
+
+    <a target="_block" href="https://www.linkedin.com/in/gagan-kumar-singh/"><h1>Linkdin</h1></a>
 </body>
 </html>
