--- a/HTML/Tasks/Task1.html
+++ b/HTML/Tasks/Task1.html
@@ -10,6 +10,6 @@
     <p><big><big><big><big>Establish</big></big></big></big> <big><big><big>objective</big></big></big> evaluation</p>
     <p><sub>and qualification</sub> <big><big>systems for</big></big> </p>
 
-    <p><big><big> students.programs</big></big> <sup>and</sup></p>
+    <p><big><big> 2students.programs</big></big> <sup>and</sup></p>
 </body>
 </html>
