--- a/CSS/GridBox/formInGrid.html
+++ b/CSS/GridBox/formInGrid.html
@@ -23,7 +23,7 @@
 <body>
     <form action="">
         <label for="">Name: </label>
-        <input type="text" name="" id="inp">
+        <input type="text" name="name" id="inp">
         <label for="">Age: </label>
         <input type="number" name="" id="inp">
         <label for="">DOB: </label>
